tests/data/route_kwargs/syntax_error/__manifest__.py
{"name": "Python module contains syntax error"}
